--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@formspree/react": "^2.5.1",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2"
   },
